cambio base de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ server.tomcat.accesslog.file-date-format=yyyy-MM-dd
 server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
 
 
-spring.datasource.url=jdbc:postgresql://isabelle.db.elephantsql.com:5432/gjufjlkn
-spring.datasource.username=gjufjlkn
-spring.datasource.password=JfTCRZAA20ObAYPEFk5J8JfaX5ZpbKqs
+spring.datasource.url=jdbc:postgresql://isabelle.db.elephantsql.com:5432/sxrxxoul
+spring.datasource.username=sxrxxoul
+spring.datasource.password=Sndy3u0_aIuCI9yt1crGMBGGDiBXFGFl
 spring.jpa.show-sql=true
 
 ## Hibernate Properties
