--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ server.tomcat.accesslog.file-date-format=yyyy-MM-dd
 server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
 
 
-spring.datasource.url=jdbc:postgresql://isabelle.db.elephantsql.com:5432/sxrxxoul
-spring.datasource.username=sxrxxoul
-spring.datasource.password=Sndy3u0_aIuCI9yt1crGMBGGDiBXFGFl
+spring.datasource.url=jdbc:postgresql://isabelle.db.elephantsql.com:5432/vgdhcfma
+spring.datasource.username=vgdhcfma
+spring.datasource.password=63AMzF6YMF_ZhubJOR0yTWVqYZ47DNXU
 spring.jpa.show-sql=true
 
 ## Hibernate Properties
